# trader

./: .env.example  .gitignore  Cargo.toml  README.md  main.py  plan.txt  polymarket.txt  polymarket_leaderboard_analysis.html  signals.jsonl
scripts/: auto_tune.py  build_winner_dataset.py  calibrate_signals.py  fetch_prices_history.py  fetch_top_traders.py  label_forward_returns.py  label_with_realprices.py  make_run_bundle.py  merge_outcome_labels.py  policy_grid.py  summarize_runs.py  tune_policy.py
src/: http_client.rs  main.rs  strategy_params.rs  types.rs
src/engine/: decision.rs  longshot.rs  mod.rs  ranker.rs  scorer.rs
src/execution/: clob.rs  config.rs  dispatch.rs  mod.rs  pricing.rs  sizing.rs
src/features/: mod.rs  momentum.rs  pressure.rs  reaction.rs
src/ingestion/: book_feed.rs  market_meta.rs  mod.rs  price_feed.rs  trade_stream.rs
src/logger/: mod.rs  writer.rs
src/signals/: absorption.rs  book_skew.rs  fake_move.rs  mod.rs  panic.rs
